v0.5 (prerelease)
   - minor CI clean-ups
   - smarter modeline status (show R:n% when one job running)
   - make dired-rsync process dest with expand-file-name
   - we now support remote to remote with an ugly port forward hack
   - prompt the user for a passphrase if we detect stall in process
v0.4
   - convert dired-rsync-[command|options] to defcustom
   - added dired-rsync-unmark-on-completion option
   - re-factored to keep temp data in lexically let variable
   - and tramp path (as defined by tramp-tramp-file-p) will attempt to be converted to remote rsync
   - updates to README.org
   - A simple Travis base CI has been enabled
v0.3
   - clean-up handling of finished tasks
   - rationalise the quoting of arguments
   - automatically set mode-line-process with status
   - added LICENSE file to repo
v0.2
   - first release to MELPA